--- a/web/templates/list/create.html
+++ b/web/templates/list/create.html
@@ -3,14 +3,14 @@
 {% block content %}
     <div class="row">
         <div class="col-lg-12">
-            <form action="" method="post">{% csrf_token %}
-                <label for="{{ form.name.name }}">
-                    {{ form.name.label }}
-                </label>
-                <input name="{{ form.name.name }}" type="text"/>
-                <input type="submit" value="Create"/>
+            <form action="" class="col-sm-3" method="post">{% csrf_token %}
+				<div class="input-group wittl-input-group">
+                	<input name="{{ form.name.name }}"  class="form-control" type="text" placeholder="Name your wittlist..." />
+                	<span class="input-group-btn">
+                		<button type="submit" class="btn wittl-btn">Create</button>
+                	</span>
+                </div>
             </form>
-
         </div>
     </div>
 
