--- a/sass/base.scss
+++ b/sass/base.scss
@@ -276,12 +276,12 @@ section.pane {
         text-transform: none;
         font-family: $body-font;
         font-weight: 300;
-        padding: 0 8px;
+        padding: 0;
         padding-bottom: 1px;
         background: none;
         border: none;
         color: #FCFCFC;
-        border-bottom: 1px solid #FCFCFC;
+        border-bottom: 1px dotted #FCFCFC;
       }
 
       & > header {
