--- a/web/templates/list/comparator.html
+++ b/web/templates/list/comparator.html
@@ -1,42 +1,46 @@
-<li class="wittl" data-wittl-name="{{ comparator.comparator_name }}">
-    <header>
-        <p class="name pull-left">{{ comparator.get_comparator_class.TITLE }}
-            {% if comparator.get_comparator_class.PRIMARY_FIELD %}
-                <input type='text'
-                       name="{{ comparator.get_comparator_class.PRIMARY_FIELD }}"
-                       class="primary-param"
-                       value="{{ comparator.get_primary_field_value|title }}"/>
-            {% endif %}
-        </p>
+<form class="comparator-form">
+
+    <li class="wittl" data-wittl-name="{{ comparator.comparator_name }}">
+        <header>
+            <p class="name pull-left">{{ comparator.get_comparator_class.TITLE }}
+                {% if comparator.get_comparator_class.PRIMARY_FIELD %}
+                    <input type='text'
+                           name="{{ comparator.get_comparator_class.PRIMARY_FIELD }}"
+                           class="primary-param"
+                           value="{{ comparator.get_primary_field_value|title }}"/>
+                {% endif %}
+            </p>
                   <span class="reveal pull-right">
                     <a href="#">
                         <i class="arrow_carrot-2down"></i>
                     </a>
                   </span>
-    </header>
-    <section class="wittl-body">
-        <div class="wittl-info">
-            <p class="wittl-description">{{ comparator.get_comparator_class.DESCRIPTION }}</p>
-        </div>
-        <div class="wittl-params">
-            {% if comparator.get_comparator_class.EXTRA_FIELDS %}
-                <header>
-                    <h3>Options</h3>
-                </header>
+        </header>
+        <section class="wittl-body">
+            <div class="wittl-info">
+                <p class="wittl-description">{{ comparator.get_comparator_class.DESCRIPTION }}</p>
+            </div>
+            <div class="wittl-params">
+                {% if comparator.get_comparator_class.EXTRA_FIELDS %}
+                    <header>
+                        <h3>Options</h3>
+                    </header>
 
-                <!-- Extra params -->
-                <div class="secondary-param">
-                    {% for field in comparator.form %}
-                        <span class="key">
+                    <!-- Extra params -->
+                    <div class="secondary-param">
+                        {% for field in comparator.form %}
+                            <span class="key">
                         {{ field.label_tag }}
                       </span>
-                        <span class="value">
+                            <span class="value">
                         <input type="text" name="{{ field.name }}" value="{{ field.value }}" class="form-control"/>
                       </span>
-                    {% endfor %}
-                </div>
-                <!-- End extra params -->
-            {% endif %}
-        </div>
-    </section>
-</li>
+                        {% endfor %}
+                    </div>
+                    <!-- End extra params -->
+                {% endif %}
+                <input type="hidden" name="comparator_id" value="{{ comparator.id }}"/>
+            </div>
+        </section>
+    </li>
+</form>
