--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -204,11 +204,13 @@
                         mapOptions);
             };
 
-            $(".comparator-form")
+            $(".wittl")
                     .on("change", ":input", function () {
-                        var formData = $(this).parents("form").serializeArray();
                         var serializedForm = {};
-                        $.each(formData, function (i, field) {
+                        $(this).parents("li").find("input").each(function (i, field) {
+                            var name = $(field).attr("name");
+                            var value = $(field).val();
+
                             serializedForm[field["name"]] = field["value"];
                         });
 
