Added wittl order persistence

--- a/web/templates/list/comparator.html
+++ b/web/templates/list/comparator.html
@@ -1,4 +1,4 @@
-<li class="wittl" data-wittl-name="{{ comparator.comparator_name }}">
+<li class="wittl" data-wittl-name="{{ comparator.comparator_name }}" data-wittl-id="{{ comparator.id }}">
         <header>
 
             <p class="name pull-left">{{ comparator.get_comparator_class.TITLE }}
