--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -221,6 +221,11 @@
                                 {"comparator_id": comparatorID, "configuration": JSON.stringify(serializedForm)}
                         )
                     });
+
+            $(".wittls").on("sortupdate", function (event, ui) {
+                var wittlIDs = $(".wittls").sortable("toArray", {attribute: "data-wittl-id"});
+                $.post("{% url "update_wittl_order" list.id %}", {wittl_ids: wittlIDs  });
+            });
         });
 
     </script>
