--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -166,7 +166,7 @@
     </script>
     {% endverbatim %}
     <script src="/static/web/js/handlebars_helpers.js" type="text/javascript"></script>
-    <script>
+    <script type="text/javascript">
         $(function () {
             var itemTemplate = Handlebars.compile($('#item-template').html());
             var addItem = function (data) {
@@ -174,6 +174,8 @@
                 $('.wittlist').isotope('insert', $newItem);
             };
 
+
+            //Initially load card data
             $.getJSON("{% url "get_scores" list.id%}", function (scoreData) {
                 var wittlSorting = new WittlSorting(scoreData);
                 $.getJSON("{% url 'lists-detail' list.id %}", function (data) {
