--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -36,14 +36,15 @@
         </header>
 
         <div class="add-new-card">
-            <form method="POST" action="{% url 'insert_list_item' list.id %}">
+            <form id="new-list-item-form" method="POST" action="{% url 'list-items-list'%}">
                 {% csrf_token %}
                 <div class="input-group wittl-input-group">
                     <input type="text" name="url" class="form-control" placeholder="Add a new item to your Wittlist"/>
                     <span class="input-group-btn">
-                        <button type="button" class="btn wittl-btn">Insert</button>
+                        <button type="submit" class="btn wittl-btn">Insert</button>
                     </span>
                 </div>
+                <input type="hidden" name="list_id" value="{{ list.id }}"/>
             </form>
         </div>
 
@@ -168,33 +169,39 @@
     <script src="/static/web/js/handlebars_helpers.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(function () {
+            var wittlSorting = new WittlSorting("{% url "lists-score-data" list.id%}");
             var itemTemplate = Handlebars.compile($('#item-template').html());
-            var addItem = function (data) {
-                var $newItem = $(itemTemplate(data));
+            var addItem = function (item) {
+                var $newItem = $(itemTemplate(item));
+                var $card = $newItem.find('.card');
+                $card.data('list-item-id', item.id);
+                $card.data('modal-data', item.attributes);
+                wittlSorting.scoreCard($card);
+
                 $('.wittlist').isotope('insert', $newItem);
             };
 
-
-            //Initially load card data
-            $.getJSON("{% url "lists-score-data" list.id%}", function (scoreData) {
-                var wittlSorting = new WittlSorting(scoreData);
+            wittlSorting.fetchScoreData(function () {
                 $.getJSON("{% url 'lists-detail' list.id %}", function (data) {
-                    _.each(data.items, function (item) {
-                        var $newItem = $(itemTemplate(item));
-                        var $card = $newItem.find('.card');
-                        $card.data('list-item-id', item.id);
-                        $card.data('modal-data', item.attributes);
-                        wittlSorting.scoreCard($card);
-
-                        $('.wittlist').isotope('insert', $newItem);
-                    });
+                    _.each(data.items, addItem);
                 });
             });
 
-            $('.wittlist').on('click', '.card', function (e) {
-                var modalData = $(this).data('modal-data');
-                populate_and_show_modal(modalData);
+            $("#new-list-item-form").submit(function(e) {
+                e.preventDefault();
+                var submitURL = $(this).attr("action");
+                $.post(submitURL, $(this).serialize(), function(data) {
+                    console.log(data);
+                });
             });
+
+            var render_map = function (lat, long) {
+                var mapOptions = {
+                    center: new google.maps.LatLng(parseFloat(lat), parseFloat(long)),
+                    zoom: 8
+                };
+                new google.maps.Map(document.getElementById("map"), mapOptions);
+            };
 
             var populate_and_show_modal = function (data) {
                 var src = $('#modal-template').html();
@@ -207,14 +214,11 @@
                 $modal.modal('show');
             };
 
-            var render_map = function (lat, long) {
-                var mapOptions = {
-                    center: new google.maps.LatLng(parseFloat(lat), parseFloat(long)),
-                    zoom: 8
-                };
-                var map = new google.maps.Map(document.getElementById("map"),
-                        mapOptions);
-            };
+
+            $('.wittlist').on('click', '.card', function (e) {
+                var modalData = $(this).data('modal-data');
+                populate_and_show_modal(modalData);
+            });
 
             $(".wittl")
                     .on("change", ":input", function () {
