--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -261,7 +261,9 @@
 
                         $.post("{% url "save_comparator_settings" %}",
                                 {"comparator_id": comparatorID, "configuration": JSON.stringify(serializedForm)}
-                        )
+                        ).done(function() {
+                                   wittlSorting.fetchScoreData();
+                                });
                     });
 
             $(".wittls").on("sortupdate", function (event, ui) {
