--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -165,6 +165,39 @@
                         <td class="value">
                             <strong>{{ person_capacity }}</strong>
                         </td>
+                    </tr>
+                    <tr>
+                        <td class="key">
+                            <p>Guests</p>
+                        </td>
+                        <td class="value">
+                            <strong>{{ person_capacity }}</strong>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="key">
+                            <p>Bathrooms</p>
+                        </td>
+                        <td class="value">
+                            <strong>{{ bathrooms }}</strong>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="key">
+                            <p>Bedrooms</p>
+                        </td>
+                        <td class="value">
+                            <strong>{{ bedrooms }}</strong>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="key">
+                            <p>Beds</p>
+                        </td>
+                        <td class="value">
+                            <strong>{{ beds }}</strong>
+                        </td>
+                    </tr>
                     </tbody>
                 </table>
             </div>
