--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -166,38 +166,16 @@
                             <strong>{{ person_capacity }}</strong>
                         </td>
                     </tr>
-                    <tr>
-                        <td class="key">
-                            <p>Guests</p>
-                        </td>
-                        <td class="value">
-                            <strong>{{ person_capacity }}</strong>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="key">
-                            <p>Bathrooms</p>
-                        </td>
-                        <td class="value">
-                            <strong>{{ bathrooms }}</strong>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="key">
-                            <p>Bedrooms</p>
-                        </td>
-                        <td class="value">
-                            <strong>{{ bedrooms }}</strong>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="key">
-                            <p>Beds</p>
-                        </td>
-                        <td class="value">
-                            <strong>{{ beds }}</strong>
-                        </td>
-                    </tr>
+                    {% for sortable in SORTABLE_ATTRS %}
+                        <tr>
+                            <td class="key">
+                                <p>Guests</p>
+                            </td>
+                            <td class="value">
+                                <strong>{{ person_capacity }}</strong>
+                            </td>
+                        </tr>
+                    {% endfor %}
                     </tbody>
                 </table>
             </div>
