Added sortable attrs to modal

--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -150,32 +150,16 @@
             <div class="stats">
                 <table class="table">
                     <tbody>
-                    <tr>
-                        <td class="key">
-                            <i class="icon_pin"></i>
-                        </td>
-                        <td class="value">
-                            <strong>{{ region }}</strong>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="key">
-                            <i class="icon_group"></i>
-                        </td>
-                        <td class="value">
-                            <strong>{{ person_capacity }}</strong>
-                        </td>
-                    </tr>
-                    {% for sortable in SORTABLE_ATTRS %}
+                    {{#each sortable_attrs}}
                         <tr>
                             <td class="key">
-                                <p>Guests</p>
+                                <p>{{@key}}</p>
                             </td>
                             <td class="value">
-                                <strong>{{ person_capacity }}</strong>
+                                <strong>{{this}}</strong>
                             </td>
                         </tr>
-                    {% endfor %}
+                    {{/each}}
                     </tbody>
                 </table>
             </div>
