--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -217,11 +217,19 @@
             });
 
             var render_map = function (lat, long) {
+                var latLng = new google.maps.LatLng(parseFloat(lat), parseFloat(long));
                 var mapOptions = {
-                    center: new google.maps.LatLng(parseFloat(lat), parseFloat(long)),
-                    zoom: 8
+                    center: latLng,
+                    zoom: 8,
+                    disableDefaultUI: true
                 };
-                new google.maps.Map(document.getElementById("map"), mapOptions);
+
+                var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+
+                var marker = new google.maps.Marker({
+                    position: latLng,
+                    map: map,
+                });
             };
 
             var populate_and_show_modal = function (data) {
