--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -22,7 +22,7 @@
         <title>My Wittlist</title>
 
         <!-- Stylesheets -->
-        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,400italic|Roboto:400,300,400italic,500,700' rel='stylesheet' type='text/css'/>
+        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,500,600,700,400italic|Roboto:400,300,400italic,500,700' rel='stylesheet' type='text/css'/>
         <link href="/static/web/css/vendor/eleganticons.css" rel="stylesheet"/>
         <link href="/static/web/css/vendor/animate.css" rel="stylesheet"/>
 
@@ -124,7 +124,7 @@
                     
                 </header>
 
-                <div class="container content">
+                <div class="container-fluid content">
                     {% block content %}
 
                     {% endblock %}
