--- a/web/templates/list/list.html
+++ b/web/templates/list/list.html
@@ -1,35 +1,139 @@
 {% extends "base.html" %}
 
+{% block outsidewrapper %}
+
+    <div class="modal fade" id="newItemModal" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                        <i class="icon_close"></i>
+                    </button>
+                    <h4 class="modal-title">Add a new item</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="input-group wittl-input-group">
+                        <input class="form-control" type="text" placeholder="Add an item to your wittlist..." />
+                        <span class="input-group-btn">
+                            <button type="submit" class="btn wittl-btn">Add</button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+{% endblock %}
+
 {% block content %}
-    <div class="row">
         <div class="col-sm-4">
             <div class="profile-wrapper">
                 <div class="profile-pic">
-                    <img src="/static/web/images/ryan.jpg" />
+                    <img src="/static/web/images/liam.jpg" />
+                </div>
+                <div class="user-details">
+                    <h3 class="username">
+                        <a href="">{{ user.username }}</a>
+                    </h3>
+                    <p class="fullname">
+                        {{ user.first_name }} {{ user.last_name }}
+                    </p>
+                    <hr />
+                    <p class="other">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </div>
 
             </div>
         </div>
-        <div class="col-sm-8">
+        <section class="pane col-sm-8">
             <header>
+                <h2>My Wittlists</h2>
             </header>
-            <ul>
-                {% for list in lists %}
-                    <li><a href="{% url 'list_view' list.id %}">{{ list.name }}</a></li>
-                {% endfor %}
-            </ul>
-                  <form action="{% url 'list_create' %}" method="post">
-                      {% csrf_token %}
+            
+            <form class="create-wittlist" action="{% url 'list_create' %}" method="post">
+                  {% csrf_token %}
                 <div class="input-group wittl-input-group">
-                    <input name="{{ create_form.name.name }}" class="form-control" type="text" placeholder="Name your wittlist..." />
+                    <input name="{{ create_form.name.name }}" class="form-control" type="text" placeholder="Name your new wittlist..." />
                     <span class="input-group-btn">
                         <button type="submit" class="btn wittl-btn">Create</button>
                     </span>
                 </div>
             </form>
 
-        </div>
-    </div>
+            <ul class="wittlist-list row">
 
+            </ul>
+
+        </div>
+
+
+{% endblock %}
+
+{% block javascript %}
+    
+    <script src="/static/web/js/vendor/handlebars.js"></script>
+
+{% verbatim %}
+    <script id="lists-template" type="text/x-handlebars-template">
+        {{#each lists}}
+        <li class="col-sm-6">
+            <div class="row">
+                <div class="col-xs-8">
+                    <div class="cover">
+                        <a href="#" class="add-item" data-toggle="modal" data-target="#newItemModal"><i class="icon_plus"></i></a>
+                        <div class="cover-inner">
+                            <img src="{{ cover }}" title="{{ name }}" alt="{{ name }}" />
+                        </div>
+                    </div>
+                    <div class="details">
+                        <h3 class="name">
+                            <a href="/list/{{ id }}">{{ name }}</a>
+                        </h3>
+                        <div class="stats">
+                            <span class="viewers">
+                                <i class="icon_group"></i>&nbsp; {{ users }}
+                            </span>
+                            <span class="items">
+                                <i class="icon_tags"></i>&nbsp; {{ items }}
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </li>
+        {{/each}}
+    </script>
+{% endverbatim %}
+
+    <script>
+        $(function() {
+
+            // Template that shit
+            $.getJSON('/api/v1/lists', function(lists) {
+                var list_ctxs = [];
+
+                for(var i = 0; i < lists.length; i++) {
+                    list_ctxs.push({
+                        id: lists[i].id,
+                        name: lists[i].name,
+                        users: lists[i].users.length,
+                        items: lists[i].items.length,
+                        cover: (lists[i].items[0]) 
+                                ? lists[i].items[0].card_image 
+                                : "/static/web/images/emptywittlist.png"
+                    }); 
+                }
+
+                var data = { lists: list_ctxs };
+
+                var lists_template = Handlebars.compile($('#lists-template').html());
+                $('.wittlist-list')
+                    .empty()
+                    .append(lists_template(data));
+            });
+
+
+        });
+    </script>
 
 {% endblock %}
