--- a/web/templates/list/list.html
+++ b/web/templates/list/list.html
@@ -45,7 +45,7 @@
 
             </div>
         </div>
-        <section class="pane col-sm-8">
+        <section class="wittlist-list-wrapper pane col-sm-8">
             <header>
                 <h2>My Wittlists</h2>
             </header>
