Moved modal code to separate file
Changed naming conventions

--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -99,6 +99,8 @@
     <script type="text/javascript" src="/static/web/js/vendor/ladda/ladda.min.js"></script>
     <script type="text/javascript" src="/static/web/js/vendor/ladda/ladda.jquery.min.js"></script>
 
+    <script type="text/javascript" src="/static/web/js/wittlist_view/modal.js"></script>
+
 
     {% verbatim %}
     <script id="item-template" type="text/x-handlebars-template">
@@ -214,42 +216,6 @@
                         });
 
                 e.preventDefault();
-            });
-
-            var render_map = function (lat, long) {
-                var latLng = new google.maps.LatLng(parseFloat(lat), parseFloat(long));
-                var mapOptions = {
-                    center: latLng,
-                    zoom: 8,
-                    disableDefaultUI: true
-                };
-
-                var map = new google.maps.Map(document.getElementById("map"), mapOptions);
-
-                var marker = new google.maps.Marker({
-                    position: latLng,
-                    map: map,
-                });
-            };
-
-            var populate_and_show_modal = function (data) {
-                var src = $('#modal-template').html();
-                var template = Handlebars.compile(src);
-
-
-                var $modal = $('#card-detail');
-                $modal.find('.modal-content').empty().append(template(data));
-                $modal.on('shown.bs.modal', function (e) {
-                    render_map(data.latitude, data.longitude);
-
-                });
-                $modal.modal('show');
-            };
-
-
-            $('.wittlist').on('click', '.card', function (e) {
-                var modalData = $(this).data('modal-data');
-                populate_and_show_modal(modalData);
             });
 
             $(".wittl")
