Moved list item form to separate file

--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -100,6 +100,7 @@
     <script type="text/javascript" src="/static/web/js/vendor/ladda/ladda.jquery.min.js"></script>
 
     <script type="text/javascript" src="/static/web/js/wittlist_view/modal.js"></script>
+    <script type="text/javascript" src="/static/web/js/wittlist_view/list_item_form.js"></script>
 
 
     {% verbatim %}
@@ -189,33 +190,6 @@
                 $.getJSON("{% url 'list-detail' list.id %}", function (data) {
                     _.each(data.items, addItem);
                 });
-            });
-
-
-            $("#new-list-item-form").submit(function (e) {
-                var form = $(this);
-
-                //Start loading indicator
-                var l = $('#new-list-item-submit').ladda();
-                l.ladda('start');
-
-                var resetForm = function () {
-                    form.find("input[name='url']").val("");
-                    l.ladda('stop');
-                };
-
-                var submitURL = form.attr("action");
-                $.post(submitURL, form.serialize())
-                        .done(function (data) {
-                            wittlSorting.fetchScoreData(function () {
-                                addItem(data);
-                                resetForm();
-                            });
-                        }).fail(function () {
-                            resetForm();
-                        });
-
-                e.preventDefault();
             });
 
             $(".wittl")
