--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -88,7 +88,11 @@
 {% endblock %}
 
 {% block javascript %}
-    <script src="/static/web/js/vendor/handlebars.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.runtime.min.js"></script>
+    <script src="/static/web/js/handlebars_helpers.js" type="text/javascript"></script>
+
+    <script type="text/javascript" src="/static/web/js/templates.js"></script>
+
     <script src="/static/web/js/vendor/isotope.pkgd.js"></script>
     <script src="/static/web/js/wittl_list.js"></script>
     <script type="text/javascript" src="//code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
@@ -103,52 +107,10 @@
     <script type="text/javascript" src="/static/web/js/wittlist_view/list_item_form.js"></script>
 
 
-    {% verbatim %}
-    <script id="item-template" type="text/x-handlebars-template" src="/static/web/hbs/item_template.hbs"></script>
-
-    <script id="modal-template" type="text/x-handlebars-template">
-        <div class="modal-body">
-            <!--button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button-->
-            <div class="details">
-                <header>
-                    <h4 class="title">{{ name }}</h4>
-
-                    <p class="city">{{ city }}</p>
-                </header>
-                <hr/>
-                <div class="image-wrapper">
-                    <img class="item-image" src="{{ image }}"/>
-                </div>
-                <hr/>
-                <p class="description">{{ description }}</p>
-            </div>
-
-            <div class="stats">
-                <table class="table">
-                    <tbody>
-                    {{#each sortable_attrs}}
-                    <tr>
-                        <td class="key">
-                            <p>{{@key}}</p>
-                        </td>
-                        <td class="value">
-                            <strong>{{this}}</strong>
-                        </td>
-                    </tr>
-                    {{/each}}
-                    </tbody>
-                </table>
-            </div>
-            <div id="map">
-            </div>
-        </div>
-    </script>
-    {% endverbatim %}
-    <script src="/static/web/js/handlebars_helpers.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(function () {
             var wittlSorting = new WittlSorting("{% url "list-score-data" list.id%}");
-            var itemTemplate = Handlebars.compile($('#item-template').html());
+            var itemTemplate = Handlebars.Templates['item_template'];
             var addItem = function (item) {
                 var $newItem = $(itemTemplate(item));
                 var $card = $newItem.find('.card');
