Moved sorting into wittlist_view dir

--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -94,17 +94,17 @@
     <script type="text/javascript" src="/static/web/js/templates.js"></script>
 
     <script src="/static/web/js/vendor/isotope.pkgd.js"></script>
-    <script src="/static/web/js/wittl_list.js"></script>
     <script type="text/javascript" src="//code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
     <script type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgcL0rohxn0A99lQMRJ8WcN17NT_x9mf0&sensor=true"></script>
+    
     <script type="text/javascript" src="/static/web/js/vendor/ladda/spin.min.js"></script>
-
     <script type="text/javascript" src="/static/web/js/vendor/ladda/ladda.min.js"></script>
     <script type="text/javascript" src="/static/web/js/vendor/ladda/ladda.jquery.min.js"></script>
 
     <script type="text/javascript" src="/static/web/js/wittlist_view/modal.js"></script>
     <script type="text/javascript" src="/static/web/js/wittlist_view/list_item_form.js"></script>
+    <script type="text/javascript" src="/static/web/js/wittlist_view/sorting.js"></script>
 
 
     <script type="text/javascript">
