--- a/sass/base.scss
+++ b/sass/base.scss
@@ -96,13 +96,14 @@ body {
 
       &:hover {
         text-decoration: none;
-        color: lighten(#656b7a, 10%);
+        color: $wittl-color;
+        // color: lighten(#656b7a, 10%);
         -webkit-transition: color 0.15s ease-in;
         transition: color 0.15s ease-in;
       }
     }
   }
-}
+} 
 
 .text_nav {
 
@@ -924,6 +925,80 @@ body.modal-open {
       }
     }
 
+
+  }
+}
+
+.login-area {
+  padding: 20px 0;
+
+  .login-form {
+    margin-top: 20px;
+    padding: 30px 50px;
+    background-color: #FFF;
+    border-radius: 3px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.15);
+
+    text-align: center;
+
+    .title {
+      font-family: $heading-font;
+      color: $wittl-color;
+      font-weight: 700;
+      font-size: 2.5em;
+      letter-spacing: 3px;
+      margin-bottom: 20px;
+    }
+
+    .intro {
+      color: lighten($heading-color, 35%);
+      letter-spacing: 1px;
+      font-size: 0.9em;
+    }
+
+    hr {
+      margin: 30px 0 50px 0;
+    }
+
+    .username, .password {
+      position: relative;
+      display: inline-block;
+      max-width: 200px;
+      text-align: center;
+      background-color: #FAFAFA;
+      color: #999;
+
+      &:focus {
+        box-shadow: none;
+        border-color: #f2eee9;
+      }
+    }
+
+    .login-error {
+      position: relative;
+      display: inline-block;
+      max-width: 200px;
+      padding-bottom: 40px;
+      color: #c5645a;
+      letter-spacing: 1;
+    }
+
+    .username {
+      z-index: 1;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+
+    .password {
+      margin-top: -1px;
+      border-top-right-radius: 0;
+      border-top-left-radius: 0;
+    }
+
+    .wittl-btn {
+      margin: 20px 0;
+      width: 200px;
+    }
 
   }
 }
