--- a/web/templates/registration/login.html
+++ b/web/templates/registration/login.html
@@ -1,25 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-lg-12">
+    <div class="row login-area">
+        <div class="login-form col-sm-4 col-sm-offset-4">
+            
+
+            <h2 class="title">wittl</h2>
+            <p class="intro">Hey there.<br />Go ahead and log in!</p>
+            <hr />
+
             {% if form.errors %}
-                <p>Your username and password didn't match. Please try again.</p>
+                <small class="login-error">Your username and password didn't match. Please try again.</small>
             {% endif %}
 
             <form role="form" method="post" action="{% url 'django.contrib.auth.views.login' %}">
                 {% csrf_token %}
-                <div class="form-group">
-                    {{ form.username.label_tag }}
-                    {{ form.username }}
-                </div>
-                <div class="form-group">
-                    {{ form.password.label_tag }}
-                    {{ form.password }}
+                <div class="wittl-input-group">
+                    <input type="text" name="{{ form.username.name }}" class="username form-control" placeholder="Username" />
+                    <input type="password" name="{{ form.password.name }}" class="password form-control" placeholder="Password" />
+                    
+                    <button type="submit" class="btn wittl-btn">Login</button>
                 </div>
 
-
-                <input type="submit" value="login"/>
                 <input type="hidden" name="next" value="{{ next }}"/>
             </form>
         </div>
